# ex2_linux

./: CMakeLists.txt  Makefile  generator.c  random_generator
inc/: error_check.h  generator.h
src/: error_check.c  main.c  preprocessed.c
